--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "5.8.*"
+        "illuminate/support": "5.8.*|5.7.*"
     },
     "require-dev": {
         "orchestra/testbench": "3.8.*",
