--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,12 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "illuminate/support": "5.8.*|5.7.*"
+        "php": "^7.2|^7.1",
+        "illuminate/support": "6.*|5.8.*|5.7.*"
     },
     "require-dev": {
-        "orchestra/testbench": "3.8.*",
-        "phpunit/phpunit": "^7.0"
+        "orchestra/testbench": "^4.0|3.8.*",
+        "phpunit/phpunit": "^8.0|^7.0"
     },
     "autoload": {
         "psr-4": {
